<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <item android:title="@string/pages">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_baseline_home_24"
                        android:title="@string/home" />

                <item
                        android:id="@+id/nav_report"
                        android:icon="@drawable/ic_timeline"
                        android:title="@string/report"/>

                <item
                        android:id="@+id/nav_discount"
                        android:icon="@drawable/ic_baseline_money_off_24"
                        android:title="@string/discount" />
            </group>
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="none">
                <item
                        android:id="@+id/sql_to_xls"
                        android:icon="@drawable/ic_baseline_insert_drive_file"
                        android:title="@string/convert_data_to_xls" />
                <item
                        android:id="@+id/dark_mode"
                        android:icon="@drawable/ic_baseline_brightness_4_24"
                        android:title="@string/dark_mode" />

                <item
                        android:id="@+id/reset"
                        android:icon="@drawable/ic_autorenew_white_24dp"
                        android:title="@string/reset_data_in_wallet"/>
            </group>
        </menu>
    </item>
</menu>