<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukan_judul" />

        <EditText
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_shopping"
                android:inputType="text"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukan_total_uang" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="@string/rp"
                app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/rp_0"
                    android:background="@android:color/white"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="4dp"
                    android:paddingTop="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/dialog_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_date"
                android:layout_marginBottom="8dp" />

        <Button
                android:id="@+id/dialog_show_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilih_date"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp" />

        <CheckBox
                android:id="@+id/dialog_checkbox_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/income" />
    </LinearLayout>
</ScrollView>