<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.add.AddDataActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            tools:title="Create"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="0dp" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_title"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_title_24"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/title"
                android:layout_marginBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_amount"
            app:layout_constraintTop_toBottomOf="@+id/til_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:prefixText="@string/rp"
            app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/amount"
                android:layout_marginBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_event_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/til_amount"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:layout_marginBottom="8dp"
                android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_desc"
            app:layout_constraintTop_toBottomOf="@+id/til_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_notes_24"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                android:layout_marginBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/til_desc"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/rg_category"
            android:layout_marginTop="16dp">

        <RadioButton
                android:text="@string/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_income" />

        <RadioButton
                android:text="@string/expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_expense" />

        <RadioButton
                android:text="@string/debt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_debt" />

    </RadioGroup>

    <Button
            android:text="@string/dialog_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rg_category"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>