<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/dark_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:title="Dark Mode"
            app:titleTextColor="@android:color/white" />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp">

        <RadioButton
                android:id="@+id/dark_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enabled" />

        <RadioButton
                android:id="@+id/dark_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disable" />

        <RadioButton
                android:id="@+id/dark_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow_system_default" />
    </RadioGroup>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-2987316684275669/1002025326" />
</LinearLayout>