<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg"
        tools:context=".view.fragment.discount.DiscCalcFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_amount"
                    app:prefixText="@string/rp"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:hint="@string/amount"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_discount"
                    app:startIconDrawable="@drawable/ic_baseline_auto_awesome_24"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="@string/discount_total"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/discount_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price_after_discount"
                    android:textColor="@color/cardText"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/discount_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/you_save"
                    android:textColor="@color/cardText"
                    android:layout_marginBottom="24dp"
                    android:visibility="gone" />

            <Button
                    android:id="@+id/discount_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/calculate"
                    android:textColor="@android:color/white"
                    android:padding="12dp"
                    android:layout_marginTop="32dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>