<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.FilterActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:title="@string/filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="0dp" />


    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/rg_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories"
            android:layout_marginTop="8dp">

        <RadioButton
                android:text="@string/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_all"
                android:checked="true" />

        <RadioButton
                android:text="@string/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_income" />

        <RadioButton
                android:text="@string/expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_expense" />

        <RadioButton
                android:text="@string/debt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_debt" />

    </RadioGroup>

    <TextView
            android:text="@string/categories"
            android:textColor="?android:textColorPrimary"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_categories"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_start_date"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_event_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rg_category"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_end_date"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_event_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/til_start_date"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_filter"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>